# pangopup

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  NOTICE  README.md
.github/workflows/: ci.yml
architecture/: README.md  delivery.md  design.md  index.md  runtime-data.md  service.md  source-data.md
architecture/decisions/: 0001-typed-provider-over-opaque-index.md  0002-cli-first-observable-surface.md  0003-standalone-genomic-variant-boundary.md  0004-speed-first-runtime-release-assets.md  0005-automatic-version-locked-assets.md  0006-index-format-selection.md  0007-deterministic-snv-transport.md  0008-strict-upstream-compatibility-profile.md
crates/pangopup-assets/: Cargo.toml  build.rs
crates/pangopup-assets/src/: lib.rs  local.rs  release.rs  release_upload_linux.rs  sync.rs
crates/pangopup-build/: Cargo.toml  build.rs
crates/pangopup-build/src/: compatibility.rs  lib.rs  main.rs  production.rs
crates/pangopup-build/tests/: compatibility.rs  full_bundle.rs  heap_bound.rs  index_candidates.rs  ingestion.rs  local_install.rs  snv_regression_fixture.rs  transport.rs  transport_resources.rs
crates/pangopup-cli/: Cargo.toml
crates/pangopup-cli/benches/: snv_lookup.rs  snv_regression.rs
crates/pangopup-cli/src/: lib.rs  main.rs
crates/pangopup-cli/tests/: snv_regression.rs
crates/pangopup-core/: Cargo.toml
crates/pangopup-core/src/: lib.rs
crates/pangopup-index/: Cargo.toml
crates/pangopup-index/benches/: index_formats.rs
crates/pangopup-index/benches/support/: candidates.rs
crates/pangopup-index/src/: lib.rs
planning/: README.md  faq.md  frontier.md  goals.md
planning/artifacts/: 002-index-format-benchmark.md  002-query-manifest.tsv  002-selected-genes.tsv  003-full-index-build.md  004-full-oracle.jsonl  004-query-manifest.tsv  004-snv-lookup-performance.md  004-source-oracle.py  005-snv-transport.md  006-local-install-and-regression.md  007-public-snv-release.md  008-pinned-remote-snv-sync.md  009-upstream-pangolin-compatibility-corpus.md  2026-07-20-full-dataset-entropy.md
planning/artifacts/2026-07-20-entropy-analyzer/: Cargo.toml  README.md
planning/artifacts/2026-07-20-entropy-analyzer/src/: main.rs
planning/issues/: 2026-07-21-overlapping-gene-mask-order.md
planning/templates/: ticket.md
planning/tickets/: 001-pinned-source-fixture-and-ingestion.md  002-measured-miniature-index-format.md  003-full-corpus-index-build-and-certification.md  004-typed-snv-lookup-cli.md  005-deterministic-split-snv-transport.md  006-local-xdg-asset-installation.md  007-publish-snv-release-assets.md  008-pinned-remote-snv-sync.md  009-upstream-pangolin-compatibility-corpus.md  README.md
release-profiles/: README.md  snv-grch38-v1.json
release-profiles/proofs/: snv-grch38-v1.json
spec/: cli.md  full-bundle.md  index-prototype.md  local-assets.md  remote-assets.md  snv-lookup.md  snv-release.md  snv-transport.md  source-inspect.md  upstream-compatibility.md
tests/fixtures/: full-build-reference.fa  lookup-fixture-README.md  make-lookup-fixture.sh
tests/fixtures/full-build-source/: ENSG00000000001.tsv  ENSG00000000002.tsv  README.md
tests/fixtures/pangolin-compat-v1/: NOTICE  cases.jsonl  manifest.json
tests/fixtures/pangolin-precompute/: README.md
tests/fixtures/snv-regression/: README.md  expected.jsonl  requests.tsv
tests/fixtures/snv-regression/bundle/: manifest.json  scores.pgi
tests/fixtures/snv-regression/expected/: ENSG00000010610.jsonl  ENSG00000141499.jsonl  ENSG00000141510.jsonl  ENSG00000169129.jsonl  ENSG00000175727.jsonl  ENSG00000185974.jsonl  unfiltered.jsonl
tools/: pangolin_compat_capture.py
