[package]
name = "pangopup-assets"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
build = "build.rs"

[dependencies]
libc = "0.2.188"
pangopup-index = { path = "../pangopup-index" }
rustix = { version = "1.1.4", features = ["fs"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_jcs = "0.1.0"
sha2 = "0.10.9"
zstd = { version = "=0.13.3", default-features = false }
zstd-safe = { version = "=7.2.4", default-features = false, features = ["std"] }
zstd-sys = { version = "=2.0.16+zstd.1.5.7", default-features = false }

[dev-dependencies]
flate2 = "1.1.5"

[lints]
workspace = true
