[package]
name = "pangopup-build"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pangopup-core = { path = "../pangopup-core" }
pangopup-index = { path = "../pangopup-index" }

[lints]
workspace = true
