[package]
name = "pangopup-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "pangopup"
path = "src/main.rs"

[dependencies]
pangopup-assets = { path = "../pangopup-assets" }
pangopup-core = { path = "../pangopup-core" }
pangopup-index = { path = "../pangopup-index" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
libc = "0.2.188"

[[bench]]
name = "snv_lookup"
harness = false

[[bench]]
name = "snv_regression"
harness = false

[lints]
workspace = true
