[package]
name = "pangopup-index"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
memmap2 = "0.9.8"
pangopup-core = { path = "../pangopup-core" }

[dev-dependencies]
libc = "0.2.188"
lz4_flex = "0.14.0"
noodles-bgzf = "0.48.0"
noodles-csi = "0.57.0"
noodles-tabix = "0.63.0"
zstd = "0.13.3"

[[bench]]
name = "index_formats"
harness = false

[lints]
workspace = true
