[package]
name = "pangopup-index"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
test-read-audit = []

[dependencies]
memmap2 = "0.9.8"
pangopup-core = { path = "../pangopup-core" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_jcs = "0.1.0"
sha2 = "0.10.9"

[dev-dependencies]
libc = "0.2.188"
lz4_flex = "0.14.0"
noodles-bgzf = "0.48.0"
noodles-csi = "0.57.0"
noodles-tabix = "0.63.0"
zstd = "0.13.3"

[[bench]]
name = "index_formats"
harness = false

[lints]
workspace = true
